# NoCDAS

./: .cproject  .project  CMakeLists.txt  LICENSE  README.md
script/: conversion.py
script/models/: lenet_mnist.pt
src/: MAC.cpp  MAC.hpp  MACnet.cpp  MACnet.hpp  Model.cpp  Model.hpp  main.cpp  parameters.hpp
src/Input/: darknet.txt  darknet1.txt  input2.txt  input7.txt  lenet.txt  vgg16.txt  weight.txt
src/NoC/: Flit.cpp  Flit.hpp  FlitBuffer.cpp  FlitBuffer.hpp  Link.cpp  Link.hpp  NI.cpp  NI.hpp  NRBase.cpp  NRBase.hpp  Packet.cpp  Packet.hpp  PacketBuffer.cpp  PacketBuffer.hpp  Port.cpp  Port.hpp  RInPort.cpp  RInPort.hpp  ROutPort.cpp  ROutPort.hpp  VCNetwork.cpp  VCNetwork.hpp  VCRouter.cpp  VCRouter.hpp
src/input/: alexnet.txt  darknet.txt  darknet1.txt  input2.txt  input7.txt  lenet.txt  vgg16.txt  weight.txt
src/output/: lenettrace.txt  recorded.txt
